# ThorsLogging

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  build  config.h.in  configure  configure.ac
src/: Makefile
src/ThorsLogging/: Makefile  ThorsLogging.cpp  ThorsLogging.h  ThorsLoggingConfig.h.in  vera_exclusions
